test/corpus/comments.txt
==================
Comments
==================

@* here is a comment *@
@{
//csharp comment
}

---

(compilation_unit
  (razor_comment)
  (razor_block
    (comment)))

==================
Empty Comment
==================

@* *@
@{
//csharp comment
}
---

(compilation_unit
  (razor_comment)
  (razor_block
    (comment)))

==================
Comment with @
==================

@* @ *@
@{
//csharp @ comment
}
---

(compilation_unit
  (razor_comment)
  (razor_block
    (comment)))

=======
Multi-line Comment
=======
@* here is a comment 
over multiple lines *@
@{
//csharp comment
}
----

(compilation_unit
  (razor_comment)
  (razor_block
    (comment)))

====
Commented Code Block
====
@*
    @{
        /* C# comment */
        // Another C# comment
    }
    <!-- HTML comment -->
*@
@{
//actual code
}

---

(compilation_unit
  (razor_comment
    (comment)
    (comment))
  (razor_block
    (comment)))

===
HTML Comment
===
<h1>
<!-- Important heading -->
IMPORTANT
</h1>
---

(compilation_unit
  (element
    (tag_name)
    (html_comment)
    (tag_name)))

===
Razor Comment inside element with razor_if
===
<div>
  @* a razor comment *@
  @if (x) { <span>y</span> }
</div>
---

(compilation_unit
  (element
    (tag_name)
    (razor_comment)
    (razor_if
      (razor_condition
        (identifier))
      (element
        (tag_name)
        (tag_name)))
    (tag_name)))

===
Razor Comment between using directives
===
@*
  header
*@
@using System
@using System.Linq
---

(compilation_unit
  (razor_comment)
  (razor_using_directive
    (identifier))
  (razor_using_directive
    (qualified_name
      (identifier)
      (identifier))))
